# darling

./: .gitignore  CMakeLists.txt
etc/: dylib.conf
include/: ConditionalMacros.h  CoreFoundation  TargetConditionals.h  objc
include/xnu/bsd/i386/: _types.h
include/xnu/mach/: ndr.h
src/AppKit/: CMakeLists.txt  NSAccessibility.m  NSAnimationContext.h  NSAnimationContext.mm  NSAnimationManager.h  NSAnimationManager.mm  NSDocumentController.m  NSImage.m  NSKeyBindingManager.h  NSKeyBindingManager.mm  NSKeyValueBinding.m  NSLayoutConstraint.mm  NSPasteboard.mm  NSTableCellView.m
src/ApplicationServices/: CMakeLists.txt
src/ApplicationServices/ATS/: CMakeLists.txt
src/ApplicationServices/ATS/libFontRegistry/: CMakeLists.txt  FontProperties.cpp  FontProperties.h
src/AudioToolbox/: CMakeLists.txt
src/Cocoa/: CMakeLists.txt
src/ColorSync/: CMakeLists.txt  ColorSyncProfile.cpp  ColorSyncProfile.h  ColorSyncTransform.cpp  ColorSyncTransform.h
src/CoreFoundation/: CFConstants.cpp  CFConstants.h  CFPreferences.cpp  CFPreferences.h  CFPreferences.mm  CFUtilities.cpp  CFUtilities.h  CMakeLists.txt  NameTranslate.cpp
src/CoreGraphics/: CGConstants.cpp  CGConstants.h  CGSHotKeys.h  CGSHotKeys.mm  CMakeLists.txt
src/CoreImage/: CIColor.h  CIColor.m  CIContext.h  CIContext.m  CIFilter.h  CIFilter.m  CIFilterShape.h  CIFilterShape.m  CIImage.h  CIImage.m  CISampler.m  CMakeLists.txt
src/CoreServices/: CMakeLists.txt  FileManager.cpp  FileManager.h  MacErrors.h  MacTypes.h
src/CoreServices/AE/: AEDataModel.h  AppleEvents.cpp  AppleEvents.h  CMakeLists.txt
src/CoreServices/CarbonCore/: CMakeLists.txt  FSEvents.cpp  FSEvents.h  Files.cpp  Files.h  Folders.cpp  Folders.h  Gestalt.cpp  Gestalt.h  Services.cpp  Services.h  TextCommon.h  ThreadSupport.cpp  ThreadSupport.h
src/Foundation/: CMakeLists.txt  NSAppleEventManager.m  NSDarwinBundle.h  NSDarwinBundle.mm  NSNotificationCenter.m  NSTextCheckingResult.h  NSTextCheckingResult.m  NSTextCheckingResult.mm  NSURL.h  NSURL.m  NSURL.mm
src/IOKit/: CMakeLists.txt
src/LaunchServices/: CMakeLists.txt  LSInfo.cpp  LSInfo.h  LSSharedFileList.cpp  LSSharedFileList.h  LaunchServices.cpp  LaunchServices.h  UTCoreTypes.cpp  UTCoreTypes.h  UTType.cpp  UTType.h
src/Metadata/: CMakeLists.txt  MDItem.cpp  MDItem.h  MDQuery.cpp  MDQuery.h
src/QuartzCore/: CAAnimation.h  CAAnimation.mm  CAAtoms.cpp  CAAtoms.h  CAAttrList.h  CAAttrList.mm  CALayer.h  CALayer.mm  CAMediaTiming.h  CAMediaTiming.mm  CAMediaTimingFunction.h  CAMediaTimingFunction.mm  CAScrollLayer.h  CAScrollLayer.mm  CATextLayer.h  CATextLayer.mm  CATransaction.h  CATransaction.mm  CMakeLists.txt
src/Security/: Authorization.cpp  Authorization.h  CMakeLists.txt  SecAccess.cpp  SecAccess.h  SecAsn1Templates.cpp  SecAsn1Templates.h  SecAsn1Types.h  SecCertificateOIDs.cpp  SecCertificateOIDs.h  SecCode.cpp  SecCode.h  SecItem.cpp  SecItem.h  cssmtype.h  oidcert.cpp  oidcert.h  oidsalg.cpp  oidsalg.h  oidsattr.cpp  oidsattr.h
src/WebKit/: CMakeLists.txt  WebArchive.m
src/crash/: CMakeLists.txt
src/dyld/: CMakeLists.txt  DWARFProducer.cpp  DWARFProducer.h  ELFBlock.h  FileMap.cpp  FileMap.h  GDBInterface.cpp  MachOLoader.cpp  MachOLoader.h  UndefinedFunction.cpp  UndefinedFunction.h  dyld.cpp  dyld.h  eh_fixup.cpp  eh_fixup.h  ld.cpp  ld.h  public.cpp  public.h
src/libSystem/: CMakeLists.txt
src/libSystem/asl/: ASLMsg.cpp  ASLMsg.h  asl.cpp
src/libSystem/common/: auto.cpp
src/libSystem/kernel-mach/: task.cpp  task.h
src/libSystem/libc/: OSAtomic.cpp  OSAtomic.h  arch.cpp  arch.h  err.c  malloc_zone.cpp  malloc_zone.h  namemap.cpp  namemap.lst  pthread.cpp
src/libSystem/liblaunch/: launch.h  liblaunch.c
src/libdyld/: CMakeLists.txt  DylibSearch.cpp  ELFBlock.cpp  ELFBlock.h  MachOMgr.cpp  MachOMgr.h  MachOObject.cpp  MachOObject.h  NativeObject.cpp  UndefinedFunction.cpp  UndefinedFunction.h  dl_public.cpp  dyld_public.cpp  dyld_public.h
src/libmach-o/: MachO.cpp  MachO.h  MachOImpl.cpp  RebaseState.cpp
src/libobjcdarwin/: ClassRegister.cpp  ClassRegister.h  NSBundle_dyld.h  NSBundle_dyld.mm  NSDarwinFramework.mm  NameTranslate.cpp
src/libobjcdarwin/common/: method.h
src/libobjcdarwin/new/: category.cpp  category.h  class.cpp  class.h  exceptions.cpp  exceptions.h  ivar.cpp  protocol.cpp
src/libobjcdarwin/old/: class.cpp
src/motool/: motool.cpp
src/thin/: CMakeLists.txt
src/xpc/: CMakeLists.txt  xpc.h  xpc.m
